# xDAN-Voice-speaches

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client_quickstart.md  compose.cuda.yaml  compose.observability.yaml  contributing.md  demo_cache_effect.py  deploy.md  download_test_audio.sh  launch.json  mkdocs.yml  model_aliases.json  model_summary.md  pyproject.toml  python_client_guide.md  quick_asr_test.sh  realtime_asr_guide.md  restart_speaches.sh  start_and_test.sh  start_service.sh  start_with_1h_cache.sh  start_with_6h_cache.sh  test_asr.sh  test_concurrent_asr.sh  test_distil_whisper.sh  test_model_cache.py  test_whisper_chinese.sh  typescript_client_guide.md  xDAN-Voice-Realtime前端接入文档.md  前端接入文档.md
.github/workflows/: docker-build-and-push.yaml  lint.yaml  publish-docs.yaml  test.yaml
configuration/: loki.yaml
docs/: configuration.md  index.md  installation.md  openapi.json  troubleshooting.md
docs/usage/: model-discovery.md  realtime-api.md  speech-to-text.md  text-to-speech.md  vad.md  voice-chat.md
examples/: check_model_status.py  speaches_config_guide.md  voice_input_api.py  voice_input_web.html  wechat_style_voice_input.py
models/: available_models.md  中文TTS模型推荐.md  中英文模型列表.md  推荐ASR模型列表.md
scripts/: create_kokoro_v1_onnx_model_repos.py  create_piper_model_repos.py  realtime_transcription_client.py  tts_performance_test.py
src/speaches/: api_types.py  config.py  dependencies.py  hf_utils.py  kokoro_utils.py  logger.py  main.py  model_aliases.py  model_manager.py  model_registry.py  piper_utils.py  text_utils.py  utils.py  whisper_utils.py
src/speaches/executors/kokoro/: model_manager.py  utils.py
src/speaches/executors/piper/: model_manager.py  utils.py
src/speaches/executors/whisper/: model_manager.py  utils.py
src/speaches/realtime/: chat_utils.py  input_audio_buffer.py  input_audio_buffer_event_router.py  session.py
src/speaches/realtime/rtc/: audio_stream_track.py
src/speaches/routers/: chat.py  misc.py  models.py  speech.py  stt.py  vad.py
src/speaches/routers/realtime/: rtc.py  ws.py
src/speaches/types/: realtime.py
src/speaches/ui/: app.py  utils.py
src/speaches/ui/tabs/: audio_chat.py  stt.py  tts.py
tests/: api_chat_test.py  api_model_test.py  api_timestamp_granularities_test.py  conftest.py  model_manager_test.py  speech_test.py  sse_test.py  text_utils_test.py  vad_test.py
tests/examples/: README.md  demo_asr_report.json  demo_test_results.py  demo_tts_report.json  quick_test.py  run_tests.sh  test_asr_capabilities.py  test_tts_capabilities.py
